--- a/kNN_Classification_Regressor.ipynb
+++ b/kNN_Classification_Regressor.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### k-Nearest Neighbors Algorithm"
+    "## k-Nearest Neighbors Algorithm"
    ]
   },
   {
